Bug 136850 - FILEOPEN DOCX Changes in floating table accepted if structure was changed
Summary: FILEOPEN DOCX Changes in floating table accepted if structure was changed
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:7.1.0
Keywords: filter:docx
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2020-09-17 14:13 UTC by NISZ LibreOffice Team
Modified: 2020-11-09 12:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Word and current Writer (63.20 KB, image/png)
2020-09-17 14:13 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-09-17 14:13:07 UTC
Created attachment 165631 [details]
Screenshot of the original document side by side in Word and current Writer

This is a followup to bug #132271.
Since then tracked changes in floating tables text are imported.
Attachment #159448 [details] from bug #132001 contains a floating table with tracked change to its structure and format change too.
In this floating table all tracked changes appear accepted when opened in Writer.

Steps to reproduce:
    1. Open attachment #159448 [details]

Actual results:
No tracked changes.

Expected results:
There should be tracked changes for the deleted columns text.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 8c18cd6823ddf4ef5ba67801a84cee26c9b5a9a6
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 László Németh 2020-10-02 14:25:07 UTC
@Gábor: thanks for the nice catch! Fixed in the master.
Comment 2 Commit Notification 2020-10-02 14:25:18 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c37f2b927715ebbeffcc1d7a1e9d646f1611c4ec

tdf#136850 DOCX: fix change tracking in floating tables

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2020-11-09 12:57:57 UTC
Verified in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: d3cee4f3839e22754e167e89d25acd6ccacf0b6e
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded