tdf#136850 DOCX: fix change tracking in floating tables

Deleted text still reappeared as normal text in floating
tables in the case of combination with tracked paragraph
property changes.

Follow-up of commit 288db6eb47fbbd2b3ca34ffea0686d8ed8ed9be9
(tdf#132271 DOCX: import change tracking in floating tables)
and commit 464a7b0631335a8f8729512b8c27f864747f56a7
(tdf#136667 DOCX import: fix crash of floating tables).

Change-Id: I2c8f63054520ce28306c063ef638756f7d8342e9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/103832
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>